--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://www.frontendmentor.io/profile/Rustom0">Rustom Dewan</a>.
+    </div>
   </div>
 
 
